@@ -4,10 +4,11 @@ import jakarta.persistence.*;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
 @Entity
 @Table(name = "usuarios")
@@ -19,32 +20,33 @@ public class Usuario implements UserDetails {
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
-    @Column(unique = true)
+    @Column(unique = true, nullable = false)
     private String login;
+
+    @Column(nullable = false)
     private String nomeCompleto;
+
+    @Column(nullable = false)
     private String senha;
     
-    // Novo campo de email para recuperação de senha
+    // Agora o email também é único no banco
+    @Column(unique = true)
     private String email;
 
     @Enumerated(EnumType.STRING)
+    @Column(nullable = false)
     private Perfil perfil;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(this.perfil);
+        // Garante que não dê erro de NullPointer se o perfil não estiver carregado
+        if (this.perfil == null) return Collections.emptyList();
+        // O Spring Security gosta que o perfil tenha o prefixo "ROLE_"
+        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + this.perfil.name()));
     }
 
-    @Override
-    public String getPassword() {
-        return this.senha;
-    }
-
-    @Override
-    public String getUsername() {
-        return this.login;
-    }
-
+    @Override public String getPassword() { return this.senha; }
+    @Override public String getUsername() { return this.login; }
     @Override public boolean isAccountNonExpired() { return true; }
     @Override public boolean isAccountNonLocked() { return true; }
     @Override public boolean isCredentialsNonExpired() { return true; }
